--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
     ],
     "require": {
         "php": ">=8.1",
-        "ext-pdo": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "vlucas/phpdotenv": "^5.5",
-        "phpmailer/phpmailer": "^6.8",
+        "ext-pdo": "*",
+        "dompdf/dompdf": "^3.1",
         "firebase/php-jwt": "^6.8",
-        "ramsey/uuid": "^4.7"
+        "phpmailer/phpmailer": "^6.8",
+        "ramsey/uuid": "^4.7",
+        "vlucas/phpdotenv": "^5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
@@ -59,4 +60,3 @@
     "minimum-stability": "stable",
     "prefer-stable": true
 }
-
