--- a/env.example
+++ b/env.example
@@ -39,11 +39,13 @@ MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=noreply@sistemabase.com
 MAIL_FROM_NAME="${APP_NAME}"
 
-# AWS Configuration (Future)
+# AWS S3 Configuration
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
+AWS_BUCKET_PUBLIC=bravtopub-fort
+AWS_BUCKET_PRIVATE=bravtopriv-fort
+AWS_S3_BASE_URL=https://s3.us-east-1.amazonaws.com
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 # Logging
