--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-pdo": "*",
+        "aws/aws-sdk-php": "^3.0",
         "dompdf/dompdf": "^3.1",
         "firebase/php-jwt": "^6.8",
         "phpmailer/phpmailer": "^6.8",
