--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "dompdf/dompdf": "^3.1",
         "firebase/php-jwt": "^6.8",
         "phpmailer/phpmailer": "^6.8",
+        "phpoffice/phpspreadsheet": "^2.0",
         "ramsey/uuid": "^4.7",
         "vlucas/phpdotenv": "^5.5"
     },
